# FTDIEEPROM

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  requirements.txt
configs/: 90-ftdi-permissions.rules.example  91-ftdi-unbind.rules.example  92-ftdi-actions.rules.example  ft4232h_default.json  ft4232h_vivado.json  ftdi-unbind.sh.example  install-udev.sh.example
docs/: skills-index.md
docs/doc/: README.md  vivado_jtag_setup.md  windows_driver_matrix.md
docs/plan/: README.md
docs/progress/: README.md
instructions/: base-instructions.md
src/ftdi_eeprom/: __init__.py  __main__.py  cli.py  config_loader.py  d2xx_backend.py  eeprom_backend.py  eeprom_manager.py  udev_generator.py  vivado_config.py
tests/: test_cli.py  test_config_loader.py  test_d2xx_backend.py  test_eeprom_backend.py  test_eeprom_manager.py  test_udev_generator.py  test_vivado_config.py
