[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ftdi-eeprom"
version = "0.1.0"
description = "FT4232H EEPROM management CLI with Vivado preset and Linux udev support"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "pyftdi==0.55.4",
    "pyusb>=1.2",
    "ftd2xx>=1.3.8; sys_platform == 'win32'",
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
ftdi-eeprom = "ftdi_eeprom.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
license-files = ["LICENSE"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
